added multi-picture option

--- a/style.css
+++ b/style.css
@@ -59,26 +59,90 @@ body{
 }
 .imgnatalie {
   margin-top: 15px;
+  width: 65%;
+  height: 200px;
+  margin-left: 100px;
+}
+.imgnatalie1 {
+  margin-top: 15px;
   width: 50%;
   height: 200px;
+  margin-left: 100px;
 }
 .button1 {
   background: darkgrey;
   border-color: transparent;
   color: #fff;
-  font-size: 12px;
+  font-size: 10px;
   font-weight: bold;
   letter-spacing: 2px;
-  height: 40px;
-  margin-top: 20px;
+  height: 20px;
+  margin-right: 0%;
   font-family: monospace;
   border-radius: 25px;
-  padding: 10px;
-  width: 80px;
+  width: 20px;
+  margin-top: 5px;
   }
   .button1:hover
   {
     background-color: darkred;
     cursor: pointer;
   }
+  .button2 {
+    background: darkgrey;
+    border-color: transparent;
+    color: #fff;
+    font-size: 10px;
+    font-weight: bold;
+    letter-spacing: 2px;
+    height: 20px;
+    margin-right: 0%;
+    font-family: monospace;
+    border-radius: 25px;
+    width: 20px;
+    }
+    .button2:hover
+    {
+      background-color: darkred;
+      cursor: pointer;
+    }
+    .button3 {
+      background: darkgrey;
+      border-color: transparent;
+      color: #fff;
+      font-size: 10px;
+      font-weight: bold;
+      letter-spacing: 2px;
+      height: 20px;
+      margin-right: 0%;
+      font-family: monospace;
+      border-radius: 25px;
+      width: 20px;
+      margin-top: 5px;
+      }
+      .button3:hover
+      {
+        background-color: darkred;
+        cursor: pointer;
+      }
+      .button4 {
+        background: darkgrey;
+        border-color: transparent;
+        color: #fff;
+        font-size: 10px;
+        font-weight: bold;
+        letter-spacing: 2px;
+        height: 20px;
+        margin-right: 0%;
+        font-family: monospace;
+        border-radius: 25px;
+        width: 20px;
+        }
+        .button4:hover
+        {
+          background-color: darkred;
+          cursor: pointer;
+        }
   .mySlides {display:none;}
+
+  .mySlides1 {display:none;}
