--- a/style.css
+++ b/style.css
@@ -61,13 +61,13 @@ body{
   margin-top: 15px;
   width: 65%;
   height: 200px;
-  margin-left: 100px;
+  margin-left: 75px;
 }
 .imgnatalie1 {
   margin-top: 15px;
   width: 65%;
   height: 200px;
-  margin-left: 100px;
+  margin-left: 75px;
 }
 .button1 {
   background: darkgrey;
@@ -82,77 +82,176 @@ body{
   border-radius: 25px;
   width: 20px;
   margin-top: 5px;
-  margin-left: -50px;
-  }
-  .button1:hover
-  {
-    background-color: darkred;
-    cursor: pointer;
-  }
-  .button2 {
-    background: darkgrey;
-    border-color: transparent;
-    color: #fff;
-    font-size: 10px;
-    font-weight: bold;
-    letter-spacing: 2px;
-    height: 20px;
-    margin-right: 0%;
-    font-family: monospace;
-    border-radius: 25px;
-    width: 20px;
-    }
-    .button2:hover
-    {
-      background-color: darkred;
-      cursor: pointer;
-    }
-    .button3 {
-      background: darkgrey;
-      border-color: transparent;
-      color: #fff;
-      font-size: 10px;
-      font-weight: bold;
-      letter-spacing: 2px;
-      height: 20px;
 
-      font-family: monospace;
-      border-radius: 25px;
-      width: 20px;
-      margin-top: 5px;
-      margin-left: -50px;
-      }
-      .button3:hover
-      {
-        background-color: darkred;
-        cursor: pointer;
-      }
-      .button4 {
-        background: darkgrey;
-        border-color: transparent;
-        color: #fff;
-        font-size: 10px;
-        font-weight: bold;
-        letter-spacing: 2px;
-        height: 20px;
-        margin-right: 0%;
-        font-family: monospace;
-        border-radius: 25px;
-        width: 20px;
-        }
-        .button4:hover
-        {
-          background-color: darkred;
-          cursor: pointer;
-        }
-  .mySlides {display:none;}
+  }
+.button1:hover{
+  background-color: darkred;
+  cursor: pointer;
+}
+.button2 {
+  background: darkgrey;
+  border-color: transparent;
+  color: #fff;
+  font-size: 10px;
+  font-weight: bold;
+  letter-spacing: 2px;
+  height: 20px;
+  margin-right: 0%;
+  font-family: monospace;
+  border-radius: 25px;
+  width: 20px;
+}
+.button2:hover {
+  background-color: darkred;
+  cursor: pointer;
+}
+.button3 {
+  background: darkgrey;
+  border-color: transparent;
+  color: #fff;
+  font-size: 10px;
+  font-weight: bold;
+  letter-spacing: 2px;
+  height: 20px;
+  font-family: monospace;
+  border-radius: 25px;
+  width: 20px;
+  margin-top: 5px;
+}
+.button3:hover {
+  background-color: darkred;
+  cursor: pointer;
+}
+.button4 {
+  background: darkgrey;
+  border-color: transparent;
+  color: #fff;
+  font-size: 10px;
+  font-weight: bold;
+  letter-spacing: 2px;
+  height: 20px;
+  margin-right: 0%;
+  font-family: monospace;
+  border-radius: 25px;
+  width: 20px;
+}
+.button4:hover {
+  background-color: darkred;
+  cursor: pointer;
+}
+.mySlides {display:none;}
 
-  .mySlides1 {display:none;}
-  .tooltip1 {
-    color:red;
-    font-size: 10px;
-   }
-   .tooltip2 {
-     color:red;
-     font-size: 10px;
-    }
+.mySlides1 {display:none;}
+.tooltip1 {
+  color:red;
+  font-size: 10px;
+}
+.tooltip2 {
+  color:red;
+  font-size: 10px;
+}
+.popup {
+  position: relative;
+  display: inline-block;
+  cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  font-size: 12px;
+  color:darkblue;
+}
+
+/* The actual popup */
+.popup .popuptext {
+  visibility: hidden;
+  width: 250px;
+  background-color: grey;
+  color: #FAF9A0;
+  text-align: center;
+  border-radius: 6px;
+  padding: 8px 0;
+  position: absolute;
+  z-index: 1;
+  bottom: 125%;
+  left: 25%;
+  margin-left: -80px;
+  font-size: 11px;
+}
+
+/* Popup arrow */
+.popup .popuptext::after {
+  content: "";
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  margin-left: -5px;
+  border-width: 5px;
+  border-style: solid;
+  border-color: #555 transparent transparent transparent;
+}
+
+/* Toggle this class - hide and show the popup */
+.popup .show {
+  visibility: visible;
+  -webkit-animation: fadeIn 1s;
+  animation: fadeIn 1s;
+}
+
+/* Add animation (fade in the popup) */
+@-webkit-keyframes fadeIn {
+  from {opacity: 0;}
+  to {opacity: 1;}
+}
+
+@keyframes fadeIn {
+  from {opacity: 0;}
+  to {opacity:1 ;}
+}
+
+/* Popup container - can be anything you want */
+.popup1 {
+  position: relative;
+  display: inline-block;
+  cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  font-size: 12px;
+  color: darkblue;
+}
+
+/* The actual popup */
+.popup1 .popuptext1 {
+  visibility: hidden;
+  width: 250px;
+  background-color: grey;
+  color: #FAF9A0;
+  text-align: center;
+  border-radius: 6px;
+  padding: 8px 0;
+  position: absolute;
+  z-index: 1;
+  bottom: 125%;
+  left: 25%;
+  margin-left: -80px;
+  font-size: 11px;
+}
+
+/* Popup arrow */
+.popup1 .popuptext1::after {
+  content: "";
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  margin-left: -5px;
+  border-width: 5px;
+  border-style: solid;
+  border-color: #555 transparent transparent transparent;
+}
+.popup1 .show1 {
+  visibility: visible;
+  -webkit-animation: fadeIn 1s;
+  animation: fadeIn 1s;
+}
