--- a/style.css
+++ b/style.css
@@ -6,13 +6,10 @@ h2{
   text-align: left;
   color: black;
 }
-p1{
-  border-bottom: 1px solid black;
-  font-size: 15px;
-}
+
 p2{
   color: #FAF9A0;
-  font-size: 17px;
+  font-size: 25px;
   border-top: .5px solid white;
   border-bottom: .5px solid white;
 }
@@ -20,7 +17,8 @@ body{
   margin: 5;
   padding: 5;
   text-align: center;
-  background: #5F5F60;
+  background: rgb(226,223,182);
+  background: linear-gradient(90deg, rgba(226,223,182,1) 18%, rgba(139,139,139,1) 71%);
   background-position: center;
   font-family: monospace;
   font-size: 14px;
@@ -57,17 +55,35 @@ body{
   display: table;
   clear: both;
 }
+.p1text {
+  font-size: 18px;
+  text-shadow: 2px 2px white;
+}
 .imgnatalie {
-  margin-top: 15px;
+  margin-top: 40px;
   width: 65%;
   height: 200px;
-  margin-left: 75px;
+  margin-left: 125px;
 }
 .imgnatalie1 {
-  margin-top: 15px;
+  margin-top: 40px;
   width: 65%;
   height: 200px;
-  margin-left: 75px;
+  margin-left: 125px;
+}
+.imgnatalie2 {
+  margin-top: 70px;
+  width: 65%;
+  height: 200px;
+  margin-left: 125px;
+  margin-bottom: 100px;
+}
+.imgnatalie3 {
+  margin-top: 70px;
+  width: 65%;
+  height: 200px;
+  margin-left: 125px;
+  margin-bottom: 100px;
 }
 .button1 {
   background: darkgrey;
@@ -77,7 +93,7 @@ body{
   font-weight: bold;
   letter-spacing: 2px;
   height: 20px;
-
+  margin-left: -50px ;
   font-family: monospace;
   border-radius: 25px;
   width: 20px;
@@ -117,6 +133,7 @@ body{
   border-radius: 25px;
   width: 20px;
   margin-top: 5px;
+  margin-left: -50px;
 }
 .button3:hover {
   background-color: darkred;
@@ -139,17 +156,82 @@ body{
   background-color: darkred;
   cursor: pointer;
 }
-.mySlides {display:none;}
+.button5 {
+  background: darkgrey;
+  border-color: transparent;
+  color: #fff;
+  font-size: 10px;
+  font-weight: bold;
+  letter-spacing: 2px;
+  height: 20px;
+  margin-left: -50px ;
+  font-family: monospace;
+  border-radius: 25px;
+  width: 20px;
+  margin-top: 5px;
 
+  }
+.button5:hover{
+  background-color: darkred;
+  cursor: pointer;
+}
+.button6 {
+  background: darkgrey;
+  border-color: transparent;
+  color: #fff;
+  font-size: 10px;
+  font-weight: bold;
+  letter-spacing: 2px;
+  height: 20px;
+  margin-right: 0%;
+  font-family: monospace;
+  border-radius: 25px;
+  width: 20px;
+}
+.button6:hover {
+  background-color: darkred;
+  cursor: pointer;
+}
+.button7 {
+  background: darkgrey;
+  border-color: transparent;
+  color: #fff;
+  font-size: 10px;
+  font-weight: bold;
+  letter-spacing: 2px;
+  height: 20px;
+  margin-left: -50px ;
+  font-family: monospace;
+  border-radius: 25px;
+  width: 20px;
+  margin-top: 5px;
+
+  }
+.button7:hover{
+  background-color: darkred;
+  cursor: pointer;
+}
+.button8 {
+  background: darkgrey;
+  border-color: transparent;
+  color: #fff;
+  font-size: 10px;
+  font-weight: bold;
+  letter-spacing: 2px;
+  height: 20px;
+  margin-right: 0%;
+  font-family: monospace;
+  border-radius: 25px;
+  width: 20px;
+}
+.button8:hover {
+  background-color: darkred;
+  cursor: pointer;
+}
+.mySlides {display:none;}
 .mySlides1 {display:none;}
-.tooltip1 {
-  color:red;
-  font-size: 10px;
-}
-.tooltip2 {
-  color:red;
-  font-size: 10px;
-}
+.mySlides2 {display:none;}
+.mySlides3 {display:none;}
 .popup {
   position: relative;
   display: inline-block;
@@ -159,7 +241,7 @@ body{
   -ms-user-select: none;
   user-select: none;
   font-size: 12px;
-  color:darkblue;
+  color:#FAF9A0;
 }
 
 /* The actual popup */
@@ -219,7 +301,7 @@ body{
   -ms-user-select: none;
   user-select: none;
   font-size: 12px;
-  color: darkblue;
+  color: #FAF9A0;
 }
 
 /* The actual popup */
@@ -251,6 +333,100 @@ body{
   border-color: #555 transparent transparent transparent;
 }
 .popup1 .show1 {
+  visibility: visible;
+  -webkit-animation: fadeIn 1s;
+  animation: fadeIn 1s;
+}
+.popup2 {
+  position: relative;
+  display: inline-block;
+  cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  font-size: 12px;
+  color:#FAF9A0;
+}
+
+/* The actual popup */
+.popup2 .popuptext2 {
+  visibility: hidden;
+  width: 250px;
+  background-color: grey;
+  color: #FAF9A0;
+  text-align: center;
+  border-radius: 6px;
+  padding: 8px 0;
+  position: absolute;
+  z-index: 1;
+  bottom: 125%;
+  left: 25%;
+  margin-left: -80px;
+  font-size: 11px;
+}
+
+/* Popup arrow */
+.popup2 .popuptext2::after {
+  content: "";
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  margin-left: -5px;
+  border-width: 5px;
+  border-style: solid;
+  border-color: #555 transparent transparent transparent;
+}
+
+/* Toggle this class - hide and show the popup */
+.popup2 .show2 {
+  visibility: visible;
+  -webkit-animation: fadeIn 1s;
+  animation: fadeIn 1s;
+}
+.popup3 {
+  position: relative;
+  display: inline-block;
+  cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  font-size: 12px;
+  color:#FAF9A0;
+}
+
+/* The actual popup */
+.popup3 .popuptext3 {
+  visibility: hidden;
+  width: 250px;
+  background-color: grey;
+  color: #FAF9A0;
+  text-align: center;
+  border-radius: 6px;
+  padding: 8px 0;
+  position: absolute;
+  z-index: 1;
+  bottom: 125%;
+  left: 25%;
+  margin-left: -80px;
+  font-size: 11px;
+}
+
+/* Popup arrow */
+.popup3 .popuptext3::after {
+  content: "";
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  margin-left: -5px;
+  border-width: 5px;
+  border-style: solid;
+  border-color: #555 transparent transparent transparent;
+}
+
+/* Toggle this class - hide and show the popup */
+.popup3 .show3 {
   visibility: visible;
   -webkit-animation: fadeIn 1s;
   animation: fadeIn 1s;
