--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -316,6 +316,19 @@ img {
   transition: .3s;
 }
 
+.button-portfolio {
+  display: inline-block;
+  background-color: var(--first-color);
+  color: var(--first-color-lighten);
+  padding: .65rem .9rem;
+  border-radius: 5px;
+  transition: .3s;
+}
+
+.button-portfolio:hover {
+  background-color: rgb(54, 53, 53);
+}
+
 .button:hover {
   background-color: rgb(79, 78, 78);
 }
